# Inventory-Application-CLI

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20251126132959_create_user_table.sql  20251126133018_create_laptop_table.sql  20251126133034_create_monitor_table.sql
src/: main.rs
src/controllers/: auth.rs  me.rs
