[package]
name = "inventory-application-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite" , "chrono"] }
tokio = "1.48.0"


[profile.dev.package.sqlx-marcos]
opt-level =3
